--- a/src/components/quizPage/QuizPage.css
+++ b/src/components/quizPage/QuizPage.css
@@ -9,3 +9,25 @@
     font-size: 28px;
     font-weight: bold;
 }
+
+.options {
+    text-align: left;
+    padding-top: 5px;
+    position:relative; left:25px;
+}
+
+#numbering {
+    color: white;
+    background-color: #ED111B !important;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px; 
+    padding-top: 7px;
+ 
+}
+
+#question-content {
+    padding-left: 7px;
+    padding-top: 5px;
+
+}
