--- a/src/components/quizPage/QuizPage.css
+++ b/src/components/quizPage/QuizPage.css
@@ -13,7 +13,7 @@
 .options {
     text-align: left;
     padding-top: 5px;
-    position:relative; left:25px;
+    position:relative; left:45px;
 }
 
 #numbering {
@@ -29,5 +29,14 @@
 #question-content {
     padding-left: 7px;
     padding-top: 5px;
+    position:relative; left:10px;
 
+}
+
+.section {
+    position:relative; left:180px;
+    padding: 30px 0px;
+    text-align: left;
+    font-weight: bold;
+    font-size: 20px
 }
