--- a/src/components/quizPage/QuizPage.css
+++ b/src/components/quizPage/QuizPage.css
@@ -6,8 +6,10 @@
 }
 
 #quiz-title {
-    font-size: 28px;
+    position: relative; top: 10px;
+    font-size: 36px;
     font-weight: bold;
+    padding-bottom : 20px;
 }
 
 .options {
